deployzip/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-svi-network-analytics/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-svi-network-analytics
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-svi-network-analytics
    sas.com/admin: namespace
  name: sas-svi-network-analytics
spec:
  host: $(INGRESS_HOST)
  path: /svi-network-analytics
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-svi-network-analytics
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-svi-network-analytics
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-svi-network-analytics
    sas.com/admin: namespace
  name: sas-svi-network-analytics-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /svi-network-analytics
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-svi-network-analytics
  wildcardPolicy: Subdomain
